--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -13,7 +13,7 @@
   </div>
   <div class="d-flex">
     <a href="#" id="showSidebar" class="text-white me-3">🗞️ Comunicados</a>
-    <a href="#" class="text-white">💬 Atención al cliente</a>
+    <a href="#" class="text-white">💬 Contacto</a>
   </div>
 </div>
 
