--- a/app/templates/tools/accesibility/index.html
+++ b/app/templates/tools/accesibility/index.html
@@ -131,8 +131,8 @@
 
     footer {
         /* background-color: #333; 
-        text-align: center; */
-        color: #f8f9fa;
+        text-align: center; 
+        color: #f8f9fa; */
         padding: 20px 0;
 
     }
@@ -3004,7 +3004,5 @@
         document.getElementById('loadingSpinner').classList.remove('d-none');
     });
 </script>
-</body>
 
-</html>
 {% endblock %}
