--- a/app/templates/no_frame.html
+++ b/app/templates/no_frame.html
@@ -211,6 +211,8 @@ footer .footer-column a:hover {
 
 <body>
 
+    {% include 'inc/header_noframe.html' %}
+
 
 
   <div class="container-fluid">
@@ -226,7 +228,7 @@ footer .footer-column a:hover {
             {% endblock %}
           </div>
 
-        {% include 'inc/footer.html' %}
+        {% include 'inc/footer_noframe.html' %}
 
       </div>
       <!-- /Main Content -->
