--- a/app/templates/inc/header_noframe.html
+++ b/app/templates/inc/header_noframe.html
@@ -1,6 +1,8 @@
 <!-- Info Bar -->
-<div class="info-bar text-center">
- Mo0nLite 🐞 ¿Has encontrado un bug? <a href="#">Reportar error</a>
+<div class="text-center">
+  <a class="navbar-brand me-auto" href="{{ url_for('index') }}"><img
+    src="{{ url_for('static', filename='logo.png') }}" alt="Logo" height="50"></a>
+
 </div>
 
 <!-- Top Bar 
@@ -16,12 +18,10 @@
 </div>
 -->
 
-<!-- Navbar -->
+<!-- Navbar 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand me-auto" href="{{ url_for('index') }}"><img
-        src="{{ url_for('static', filename='logo.png') }}" alt="Logo" height="50"></a>
-
+    
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -30,3 +30,4 @@
 
   </div>
 </nav>
+-->
