--- a/app/templates/inc/footer.html
+++ b/app/templates/inc/footer.html
@@ -55,7 +55,7 @@
       </div>
     </div>
   </div>
-<hr style="color: var(--primary-color);" />
+<br clear="all"/><!-- style="color: var(--primary-color);" /> -->
   <div class="container">
     <div class="row">
       <div class="col-md-3 footer-column">
